# aoc_2019

./: .gitignore  Cargo.toml  build.rs  day_04.rs  gen_day.rs
benches/: intcode.rs
src/: day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  error.rs  intcode.rs  lib.rs  main.rs  vec2.rs  vec3.rs
src/day/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs
tests/: day_01.rs  days.rs  intcode.rs
